--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,11 @@ a {
   background-color: #e89b17;
 }
 .header {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.5)), url(/src/assets/lapices.webp);
-
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.9),
+      rgba(255, 255, 255, 0.5)
+    ),
+    url(/src/assets/lapices.webp);
 }
 .header div {
   display: grid;
