--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 *,
 *:before,
@@ -17,6 +18,30 @@ a {
   color: inherit;
 }
 
+.tiempo-bg {
+  background-image: url('/src/assets/tiempo.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 2rem;
+  height: 2rem;
+}
+.pro-bg {
+  background-image: url('/src/assets/pro.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 2rem;
+  height: 2rem;
+}
+.tacto-bg {
+  background-image: url('/src/assets/check.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 2rem;
+  height: 2rem;
+}
 .container {
   width: 100%;
   margin-left: auto;
@@ -51,6 +76,9 @@ a {
   background-image: linear-gradient(#e89b17, #cd7712);
   color: white;
   box-shadow: 8px 8px 60px rgba(0, 0, 0, 0.4);
+}
+.applist > :nth-child(even) {
+  background-color: #fbf1ca;
 }
 
 .form-button {
@@ -182,12 +210,107 @@ a {
   }
   .navlist-container {
     display: flex;
-    gap: 1.2rem;
+    gap: 2rem;
   }
   .nav-container {
-    font-size: 13px;
+    font-size: 12px;
+    padding: 1rem;
     display: flex;
     justify-content: space-around;
+  }
+
+  .title {
+    text-align: center;
+  }
+
+  .opinion-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .opinion-card {
+    display: grid;
+    gap: 0.5rem;
+    width: 8rem;
+    margin-left: 2rem;
+    max-height: 8rem;
+    height: auto;
+    padding: 0.5rem;
+    border-left: 4px solid #cd7712;
+    background-color: #f7e290;
+    border-radius: 10px;
+  }
+  .opinion-card p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .perk {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin: 0 0 1rem 0;
+  }
+  .perk img {
+    width: 1.3rem;
+  }
+  .perk-container p {
+    padding-left: 2.5rem;
+  }
+  .perk-container {
+    padding: 1rem;
+  }
+  .perk-container div {
+    margin-top: 1rem;
+  }
+
+  .contact-form {
+    display: flex;
+    padding: 1rem;
+    /* background-color: rgba(200, 200, 200, 1); */
+    border-radius: 10px;
+    flex-direction: column;
+    margin: 0 auto;
+    gap: 1rem;
+  }
+  .form-elements {
+    margin: 0 auto;
+  }
+  .contact-form div {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .contact-form div input {
+    border-radius: 2cm;
+    border: none;
+    height: 1rem;
+    width: 100%;
+  }
+  .star-bg {
+    background-image: url(/src/assets/star.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 1rem;
+    height: 1rem;
+  }
+  .star-container {
+    display: flex;
+    align-self: end;
+  }
+  .footer {
+    display: grid;
+    background-color: #f7e290;
+    width: 100%;
+    height: 10rem;
+    padding: 1rem;
+  }
+  .footer-content {
+    font-size: 10px;
+    display: flex;
+    gap: 1rem;
+  }
+  .footer-section {
+    font-size: 10px;
   }
 }
 
@@ -196,12 +319,235 @@ a {
   .container {
     max-width: 640px;
   }
+  .navlist-container {
+    display: flex;
+    gap: 2rem;
+  }
+  .nav-container {
+    font-size: 12px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .title {
+    text-align: center;
+  }
+
+  .opinion-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .opinion-card {
+    display: grid;
+    gap: 0.5rem;
+    min-width: 8rem;
+    margin-right: 2rem;
+    max-height: 8rem;
+    height: auto;
+    padding: 0.5rem;
+    border-left: 4px solid #cd7712;
+    background-color: #f7e290;
+    border-radius: 10px;
+  }
+  .opinion-card p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .perk {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin: 0 0 1rem 0;
+  }
+  .perk img {
+    width: 1.3rem;
+  }
+  .perk-container p {
+    padding-left: 2.5rem;
+  }
+  .perk-container {
+    padding: 1rem;
+  }
+  .perk-container div {
+    margin-top: 1rem;
+  }
+
+  .contact-form {
+    display: flex;
+    padding: 1rem;
+    /* background-color: rgba(200, 200, 200, 1); */
+    border-radius: 10px;
+    flex-direction: column;
+    margin: 0 auto;
+    gap: 1rem;
+  }
+  .form-elements {
+    margin: 0 auto;
+  }
+  .contact-form div {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .contact-form div input {
+    border-radius: 2cm;
+    border: none;
+    height: 1rem;
+    width: 100%;
+  }
+  .star-bg {
+    background-image: url(/src/assets/star.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 1rem;
+    height: 1rem;
+  }
+  .star-container {
+    display: flex;
+    align-self: end;
+  }
+  .footer {
+    display: grid;
+    background-color: #f7e290;
+    width: 100%;
+    height: 10rem;
+    padding: 1rem;
+  }
+  .footer-content {
+    font-size: 10px;
+    display: flex;
+    gap: 1rem;
+  }
+  .footer-section {
+    font-size: 10px;
+  }
 }
 
 /* md */
 @media (min-width: 768px) {
   .container {
     max-width: 768px;
+  }
+  .navlist-container {
+    display: flex;
+    gap: 3rem;
+  }
+  .nav-container {
+    font-size: 14px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .header-container {
+    height: 10rem;
+    display: flex;
+  }
+  .header-container h1 {
+    font-size: 40px;
+  }
+
+  .title {
+    text-align: center;
+  }
+
+  .opinion-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .opinion-card {
+    display: grid;
+    gap: 0.5rem;
+    min-width: 8rem;
+    margin-right: 2rem;
+    max-height: 8rem;
+    height: auto;
+    padding: 0.5rem;
+    border-left: 4px solid #cd7712;
+    background-color: #f7e290;
+    border-radius: 10px;
+  }
+  .opinion-card p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .perk {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin: 0 0 1rem 0;
+  }
+  .perk img {
+    width: 1.3rem;
+  }
+  .perk-container p {
+    padding-left: 2.5rem;
+  }
+  .perk-container {
+    margin: 0 auto;
+    width: 70%;
+    padding: 1rem;
+  }
+  .perk-container div {
+    margin-top: 1rem;
+  }
+
+  .contact-form {
+    display: flex;
+    padding: 1rem;
+    /* background-color: rgba(200, 200, 200, 1); */
+    border-radius: 10px;
+    flex-direction: column;
+    margin: 0 auto;
+    gap: 1rem;
+  }
+  .form-elements {
+    margin: 0 auto;
+  }
+  .contact-form div {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .contact-form div input {
+    border-radius: 2cm;
+    border: none;
+    height: 1rem;
+    width: 100%;
+  }
+  .star-bg {
+    background-image: url(/src/assets/star.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 1rem;
+    height: 1rem;
+  }
+  .star-container {
+    display: flex;
+    align-self: end;
+  }
+  .footer {
+    display: grid;
+    background-color: #f7e290;
+    width: 100%;
+    height: 10rem;
+    padding: 1rem;
+  }
+  .footer-bottom {
+    display: flex;
+    justify-self: center;
+  }
+  .footer-content {
+    font-size: 10px;
+    display: flex;
+    justify-content: space-around;
+    gap: 1rem;
+  }
+  .footer-section {
+    font-size: 10px;
   }
 }
 
@@ -210,6 +556,132 @@ a {
   .container {
     max-width: 1024px;
   }
+  .navlist-container {
+    display: flex;
+    gap: 3rem;
+  }
+  .nav-container {
+    font-size: 14px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .header-container {
+    height: 15rem;
+    display: flex;
+  }
+  .header-container h1 {
+    font-size: 50px;
+  }
+  .header-desc {
+    font-size: 20px;
+  }
+  .header-title {
+    font-size: 30px;
+  }
+
+  .title {
+    text-align: center;
+  }
+
+  .opinion-container {
+    display: grid;
+    width: 70%;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .opinion-card {
+    display: grid;
+    gap: 0.5rem;
+    min-width: 8rem;
+    margin-right: 2rem;
+    max-height: 8rem;
+    height: auto;
+    padding: 0.5rem;
+    border-left: 4px solid #cd7712;
+    background-color: #f7e290;
+    border-radius: 10px;
+  }
+  .opinion-card p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .perk {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin: 0 0 1rem 0;
+  }
+  .perk img {
+    width: 1.3rem;
+  }
+  .perk-container p {
+    padding-left: 2.5rem;
+  }
+  .perk-container {
+    margin: 0 auto;
+    width: 70%;
+    padding: 1rem;
+  }
+  .perk-container div {
+    margin-top: 1rem;
+  }
+
+  .contact-form {
+    display: flex;
+    padding: 1rem;
+    /* background-color: rgba(200, 200, 200, 1); */
+    border-radius: 10px;
+    flex-direction: column;
+    margin: 0 auto;
+    gap: 1rem;
+  }
+  .form-elements {
+    margin: 0 auto;
+  }
+  .contact-form div {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .contact-form div input {
+    border-radius: 2cm;
+    border: none;
+    height: 1rem;
+    width: 100%;
+  }
+  .star-bg {
+    background-image: url(/src/assets/star.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 1rem;
+    height: 1rem;
+  }
+  .star-container {
+    display: flex;
+    align-self: end;
+  }
+  .footer {
+    display: grid;
+    background-color: #f7e290;
+    width: 100%;
+    height: 10rem;
+    padding: 1rem;
+  }
+  .footer-bottom {
+    display: flex;
+    justify-self: center;
+  }
+  .footer-content {
+    font-size: 10px;
+    display: flex;
+    justify-content: space-around;
+    gap: 1rem;
+  }
+  .footer-section {
+    font-size: 10px;
+  }
 }
 
 /* xl */
@@ -217,19 +689,291 @@ a {
   .container {
     max-width: 1280px;
   }
+  .navlist-container {
+    display: flex;
+    gap: 3rem;
+  }
+  .nav-container {
+    font-size: 14px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .header-container {
+    height: 15rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .header-container h1 {
+    font-size: 50px;
+  }
+  .header-desc {
+    font-size: 20px;
+  }
+  .header-title {
+    font-size: 30px;
+  }
+
+  .title {
+    text-align: center;
+  }
+
+  .opinion-container {
+    display: grid;
+    width: 50%;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .opinion-card {
+    display: grid;
+    gap: 0.5rem;
+    min-width: 8rem;
+    margin-right: 2rem;
+    max-height: 8rem;
+    height: auto;
+    padding: 0.5rem;
+    border-left: 4px solid #cd7712;
+    background-color: #f7e290;
+    border-radius: 10px;
+  }
+  .opinion-card p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .perk {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin: 0 0 1rem 0;
+  }
+  .perk img {
+    width: 1.3rem;
+  }
+  .perk-container p {
+    padding-left: 2.5rem;
+  }
+  .perk-container {
+    text-align: center;
+    place-content: center;
+    width: 70%;
+    padding: 1rem;
+  }
+  .perk {
+    justify-content: center;
+  }
+
+  .perk-container div {
+    margin-top: 1rem;
+  }
+
+  .contact-form {
+    display: flex;
+    padding: 1rem;
+    /* background-color: rgba(200, 200, 200, 1); */
+    border-radius: 10px;
+    flex-direction: column;
+    margin: 0 auto;
+    gap: 1rem;
+  }
+  .form-elements {
+    margin: 0 auto;
+  }
+  .contact-form div {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .contact-form div input {
+    border-radius: 2cm;
+    border: none;
+    height: 1rem;
+    width: 100%;
+  }
+  .star-bg {
+    background-image: url(/src/assets/star.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 1rem;
+    height: 1rem;
+  }
+  .star-container {
+    display: flex;
+    align-self: end;
+  }
+  .footer {
+    display: grid;
+    background-color: #f7e290;
+    width: 100%;
+    height: 10rem;
+    padding: 1rem;
+  }
+  .footer-bottom {
+    display: flex;
+    justify-self: center;
+  }
+  .footer-content {
+    font-size: 10px;
+    display: flex;
+    justify-content: space-around;
+    gap: 1rem;
+  }
+  .footer-section {
+    font-size: 10px;
+  }
 }
 
 /* 2xl */
 @media (min-width: 1536px) {
   .container {
     max-width: 1536px;
+    padding: 4rem;
+  }
+  h2 {
+    font-size: 35px;
+  }
+  .navlist-container {
+    display: flex;
+    gap: 3rem;
+  }
+  .nav-container {
+    font-size: 20px;
+    padding: 1rem 10rem;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .header-container {
+    height: 18rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .header-container h1 {
+    font-size: 60px;
+  }
+  .header-desc {
+    font-size: 26px;
+  }
+  .header-title {
+    font-size: 30px;
+  }
+
+  .title {
+    text-align: center;
+  }
+
+  .opinion-container {
+    display: grid;
+    width: 50%;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .opinion-card {
+    display: grid;
+    gap: 0.5rem;
+    min-width: 8rem;
+    margin-right: 2rem;
+    max-height: 8rem;
+    height: auto;
+    padding: 0.5rem;
+    border-left: 4px solid #cd7712;
+    background-color: #f7e290;
+    border-radius: 10px;
+  }
+  .opinion-card p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .perk {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin: 0 0 1rem 0;
+  }
+  .perk img {
+    width: 1.3rem;
+  }
+  .perk-container p {
+    padding-left: 2.5rem;
+  }
+  .perk-container {
+    text-align: center;
+    place-content: center;
+    width: 70%;
+    padding: 1rem;
+  }
+  .perk {
+    justify-content: center;
+  }
+
+  .perk-container div {
+    margin-top: 1rem;
+  }
+
+  .contact-form {
+    display: flex;
+    padding: 1rem;
+    /* background-color: rgba(200, 200, 200, 1); */
+    border-radius: 10px;
+    flex-direction: column;
+    margin: 0 auto;
+    gap: 1rem;
+  }
+  .form-elements {
+    margin: 0 auto;
+  }
+  .contact-form div {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .contact-form div input {
+    border-radius: 2cm;
+    border: none;
+    height: 1rem;
+    width: 100%;
+  }
+  .star-bg {
+    background-image: url(/src/assets/star.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 1rem;
+    height: 1rem;
+  }
+  .star-container {
+    display: flex;
+    align-self: end;
+  }
+  .footer {
+    display: grid;
+    background-color: #f7e290;
+    width: 100%;
+    height: 10rem;
+    padding: 3rem 4rem;
+  }
+  .footer-bottom {
+    display: flex;
+    justify-self: center;
+  }
+  .footer-content {
+    font-size: 10px;
+    display: flex;
+    justify-content: space-around;
+    gap: 1rem;
+  }
+  .footer-section {
+    font-size: 10px;
   }
 }
-
+/* 
 desktopcontainerutilityclass: .container {
   max-width: 1536px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-}
+} */
