--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ a {
 }
 
 .tiempo-bg {
-  background-image: url('/src/assets/tiempo.png');
+  background-image: url("/assets/tiempo.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -27,7 +27,7 @@ a {
   height: 2rem;
 }
 .pro-bg {
-  background-image: url('/src/assets/pro.png');
+  background-image: url("/assets/pro.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -35,7 +35,7 @@ a {
   height: 2rem;
 }
 .tacto-bg {
-  background-image: url('/src/assets/check.png');
+  background-image: url("/assets/check.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -59,7 +59,7 @@ a {
       rgba(255, 255, 255, 0.9),
       rgba(255, 255, 255, 0.5)
     ),
-    url(/src/assets/lapices.webp);
+    url(/assets/lapices.webp);
 }
 .header div {
   display: grid;
@@ -81,13 +81,16 @@ a {
   background-color: #fbf1ca;
 }
 
-.form-button {
-  padding: 0.3rem;
-  color: #411b07;
+.button {
+  display: flex;
+  gap: 0.3rem;
+  height: fit-content;
+  padding: 0.4rem;
+  color: white;
   background-image: linear-gradient(#e89b17, #cd7712);
-
-  border: none;
+  border: 1px solid;
   border-radius: 2px;
+  align-items: center;
 }
 
 /* xss */
@@ -98,6 +101,7 @@ a {
     display: grid;
     gap: 1rem;
   }
+  
   .navlist-container {
     display: flex;
     gap: 0.5rem;
@@ -150,7 +154,15 @@ a {
   .perk-container div {
     margin-top: 1rem;
   }
+  .contacto-container {
+    height: 60vh;
+  }
 
+  .buttons-container {
+    display: flex;
+    gap: 2rem;
+    margin: 0 auto;
+  }
   .contact-form {
     display: flex;
     padding: 1rem;
@@ -175,7 +187,7 @@ a {
     width: 100%;
   }
   .star-bg {
-    background-image: url(/src/assets/star.png);
+    background-image: url(/assets/star.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -208,15 +220,22 @@ a {
   .container {
     max-width: 475px;
   }
+  /* GENERAL--------------- */
+  h1 {
+    font-size: 35px;
+  }
+  h2 {
+    font-size: 28px;
+  }
   .navlist-container {
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
   }
   .nav-container {
     font-size: 12px;
     padding: 1rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   .title {
@@ -286,7 +305,7 @@ a {
     width: 100%;
   }
   .star-bg {
-    background-image: url(/src/assets/star.png);
+    background-image: url(/assets/star.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -327,7 +346,7 @@ a {
     font-size: 12px;
     padding: 1rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   .title {
@@ -385,6 +404,11 @@ a {
   .form-elements {
     margin: 0 auto;
   }
+
+  .contacto-container p {
+    margin: 0 auto;
+    width: 50%;
+  }
   .contact-form div {
     display: flex;
     flex-direction: column;
@@ -397,7 +421,7 @@ a {
     width: 100%;
   }
   .star-bg {
-    background-image: url(/src/assets/star.png);
+    background-image: url(/assets/star.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -419,8 +443,10 @@ a {
     font-size: 10px;
     display: flex;
     gap: 1rem;
+    justify-content: space-around;
   }
   .footer-section {
+    margin: 0 auto;
     font-size: 10px;
   }
 }
@@ -436,7 +462,7 @@ a {
   }
   .nav-container {
     font-size: 14px;
-    padding: 1rem;
+    padding: 1rem 2rem;
     display: flex;
     justify-content: space-between;
   }
@@ -456,6 +482,7 @@ a {
   .opinion-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    width: 90%;
   }
   .opinion-card {
     display: grid;
@@ -518,7 +545,7 @@ a {
     width: 100%;
   }
   .star-bg {
-    background-image: url(/src/assets/star.png);
+    background-image: url(/assets/star.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -529,6 +556,7 @@ a {
     display: flex;
     align-self: end;
   }
+
   .footer {
     display: grid;
     background-color: #f7e290;
@@ -562,7 +590,7 @@ a {
   }
   .nav-container {
     font-size: 14px;
-    padding: 1rem;
+    padding: 1rem 10rem;
     display: flex;
     justify-content: space-between;
   }
@@ -570,6 +598,7 @@ a {
   .header-container {
     height: 15rem;
     display: flex;
+    width: 70%;
   }
   .header-container h1 {
     font-size: 50px;
@@ -642,6 +671,7 @@ a {
   .contact-form div {
     display: flex;
     flex-direction: column;
+
     gap: 0.5rem;
   }
   .contact-form div input {
@@ -651,7 +681,7 @@ a {
     width: 100%;
   }
   .star-bg {
-    background-image: url(/src/assets/star.png);
+    background-image: url(/assets/star.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -695,7 +725,7 @@ a {
   }
   .nav-container {
     font-size: 14px;
-    padding: 1rem;
+    padding: 1rem 15rem;
     display: flex;
     justify-content: space-between;
   }
@@ -763,7 +793,10 @@ a {
   .perk {
     justify-content: center;
   }
-
+  .perk-container {
+    display: flex;
+    place-content: start;
+  }
   .perk-container div {
     margin-top: 1rem;
   }
@@ -791,8 +824,13 @@ a {
     height: 1rem;
     width: 100%;
   }
+  .contacto-container p {
+    display: flex;
+    width: 30%;
+    margin: 0 auto;
+  }
   .star-bg {
-    background-image: url(/src/assets/star.png);
+    background-image: url(/assets/star.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -896,6 +934,10 @@ a {
   .perk img {
     width: 1.3rem;
   }
+  .perk-container {
+    display: flex;
+    place-content: start;
+  }
   .perk-container p {
     padding-left: 2.5rem;
   }
@@ -937,7 +979,7 @@ a {
     width: 100%;
   }
   .star-bg {
-    background-image: url(/src/assets/star.png);
+    background-image: url(/assets/star.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -977,3 +1019,17 @@ desktopcontainerutilityclass: .container {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 } */
+.icon {
+  width: 1.5rem;
+}
+.div-perk {
+  display: flex;
+  align-items: center;
+}
+.logo-icon {
+ height: .7rem;
+}
+.logo {
+  display: flex;
+  gap: .4rem;
+}
