--- a/src/index.css
+++ b/src/index.css
@@ -92,16 +92,19 @@ a {
   border-radius: 2px;
   align-items: center;
 }
-
+section {
+  height: 50vh;
+}
 /* xss */
 @media (min-width: 210px) {
   .container {
     max-width: 210;
-    padding: 1rem;
+    height: auto;
+    padding: 2rem 1rem;
     display: grid;
     gap: 1rem;
   }
-  
+
   .navlist-container {
     display: flex;
     gap: 0.5rem;
@@ -112,8 +115,10 @@ a {
     display: flex;
     justify-content: space-around;
   }
-
-  .title {
+  .header-container {
+    height: 24vh;
+  }
+  .section-title {
     text-align: center;
   }
 
@@ -125,7 +130,7 @@ a {
     display: grid;
     gap: 0.5rem;
     width: 8rem;
-    max-height: 8rem;
+    max-height: 10rem;
     height: auto;
     padding: 0.5rem;
     border-left: 4px solid #cd7712;
@@ -155,7 +160,7 @@ a {
     margin-top: 1rem;
   }
   .contacto-container {
-    height: 60vh;
+    height: auto;
   }
 
   .buttons-container {
@@ -251,7 +256,7 @@ a {
     gap: 0.5rem;
     width: 8rem;
     margin-left: 2rem;
-    max-height: 8rem;
+    max-height: 10rem;
     height: auto;
     padding: 0.5rem;
     border-left: 4px solid #cd7712;
@@ -482,14 +487,14 @@ a {
   .opinion-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    width: 90%;
+    width: 100%;
   }
   .opinion-card {
     display: grid;
     gap: 0.5rem;
-    min-width: 8rem;
+    min-width: 10rem;
     margin-right: 2rem;
-    max-height: 8rem;
+    max-height: 10rem;
     height: auto;
     padding: 0.5rem;
     border-left: 4px solid #cd7712;
@@ -616,15 +621,15 @@ a {
 
   .opinion-container {
     display: grid;
-    width: 70%;
+    width: 90%;
     grid-template-columns: repeat(3, 1fr);
   }
   .opinion-card {
     display: grid;
     gap: 0.5rem;
-    min-width: 8rem;
+    min-width: 10rem;
     margin-right: 2rem;
-    max-height: 8rem;
+    max-height: 10rem;
     height: auto;
     padding: 0.5rem;
     border-left: 4px solid #cd7712;
@@ -698,10 +703,12 @@ a {
     width: 100%;
     height: 10rem;
     padding: 1rem;
+    font-size: 20px;
   }
   .footer-bottom {
     display: flex;
     justify-self: center;
+    font-size: 20px;
   }
   .footer-content {
     font-size: 10px;
@@ -752,16 +759,17 @@ a {
   }
 
   .opinion-container {
-    display: grid;
-    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
     grid-template-columns: repeat(3, 1fr);
   }
   .opinion-card {
     display: grid;
     gap: 0.5rem;
-    min-width: 8rem;
+    min-width: 10rem;
     margin-right: 2rem;
-    max-height: 8rem;
+    max-height: 10rem;
     height: auto;
     padding: 0.5rem;
     border-left: 4px solid #cd7712;
@@ -827,6 +835,7 @@ a {
   .contacto-container p {
     display: flex;
     width: 30%;
+    height: 12vh;
     margin: 0 auto;
   }
   .star-bg {
@@ -845,8 +854,9 @@ a {
     display: grid;
     background-color: #f7e290;
     width: 100%;
-    height: 10rem;
-    padding: 1rem;
+    height: 15rem;
+    padding: 2rem;
+    
   }
   .footer-bottom {
     display: flex;
@@ -859,7 +869,7 @@ a {
     gap: 1rem;
   }
   .footer-section {
-    font-size: 10px;
+    font-size: 15px;
   }
 }
 
@@ -937,6 +947,9 @@ a {
   .perk-container {
     display: flex;
     place-content: start;
+  }
+  .perk-desc {
+    
   }
   .perk-container p {
     padding-left: 2.5rem;
@@ -1027,9 +1040,9 @@ desktopcontainerutilityclass: .container {
   align-items: center;
 }
 .logo-icon {
- height: .7rem;
+  height: 0.7rem;
 }
 .logo {
   display: flex;
-  gap: .4rem;
+  gap: 0.4rem;
 }
